Updated letter-spacing for chrome fixing.

--- a/src/pages/about/styles.module.scss
+++ b/src/pages/about/styles.module.scss
@@ -48,6 +48,7 @@
         font-weight: bold;
         line-height: 3.2rem;
         padding-bottom: 1.2rem;
+        letter-spacing: 0.25rem;
       }
 
       cite {
